<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.mitallast</groupId>
    <artifactId>netty-test</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <netty.version>4.0.18.Final</netty.version>
        <logback.version>1.1.2</logback.version>
        <slf4j.version>1.7.7</slf4j.version>
        <jackson.version>2.3.2</jackson.version>
        <joda.version>2.3</joda.version>
        <javassist.version>3.18.1-GA</javassist.version>
        <bigqueue.version>0.7.0</bigqueue.version>
        <google.guava.version>15.0</google.guava.version>
        <google.guice.version>4.0-beta4</google.guice.version>
        <junit.version>4.11</junit.version>
        <leveldb.version>1.8</leveldb.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>${netty.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>${joda.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>${javassist.version}</version>
            <scope>compile</scope>
        </dependency>
        <!--<dependency>-->
        <!--<groupId>com.leansoft</groupId>-->
        <!--<artifactId>bigqueue</artifactId>-->
        <!--<version>${bigqueue.version}</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${google.guice.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.fusesource.leveldbjni</groupId>
            <artifactId>leveldbjni-all</artifactId>
            <version>${leveldb.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!--<repositories>-->
    <!--<repository>-->
    <!--<id>github.release.repo</id>-->
    <!--<url>https://raw.github.com/bulldog2011/bulldog-repo/master/repo/releases/</url>-->
    <!--</repository>-->
    <!--</repositories>-->

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.1</version>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <argument>-server</argument>
                        <argument>-d64</argument>
                        <argument>-Xms512m</argument>
                        <argument>-Xmx512m</argument>
                        <argument>-XX:MaxPermSize=512m</argument>
                        <argument>-XX:ReservedCodeCacheSize=256m</argument>
                        <argument>-XX:+UseG1GC</argument>
                        <argument>-XX:MaxGCPauseMillis=150</argument>
                        <argument>-XX:InitiatingHeapOccupancyPercent=70</argument>
                        <argument>-XX:NewRatio=2</argument>
                        <argument>-XX:SurvivorRatio=8</argument>
                        <argument>-XX:MaxTenuringThreshold=15</argument>
                        <argument>-XX:G1ReservePercent=50</argument>
                        <argument>-XX:G1HeapRegionSize=32m</argument>
                        <argument>-XX:+UseCompressedOops</argument>
                        <argument>-XX:+AggressiveOpts</argument>
                        <argument>-XX:+UseFastAccessorMethods</argument>
                        <argument>-XX:-MaxFDLimit</argument>
                        <argument>-Dio.netty.allocator.numDirectArenas=64</argument>
                        <argument>-classpath</argument>
                        <classpath/>
                        <argument>org.mitallast.queue.Main</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>